--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 .sidebar {
-  height: 100%; /* 100% Full-height */
-  width: 0; /* 0 width - change this with JavaScript */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Stay on top */
+  height: 100%; 
+  width: 0; 
+  position: fixed; 
+  z-index: 1; 
   top: 0;
   left: 0;
-  background-color: #111; /* Black*/
-  overflow-x: hidden; /* Disable horizontal scroll */
-  padding-top: 60px; /* Place content 60px from the top */
-  transition: 1s; /* 0.5 second transition effect to slide in the sidebar */
+  background-color: #111; 
+  overflow-x: hidden; 
+  padding-top: 60px; 
+  transition: 1s; 
 }
 
 .sidebar input {
@@ -66,14 +66,14 @@ li {
   background-color: #111;
 }
 
-/* When you mouse over the navigation links, change their color */
+
 .sidebar a:hover {
   color: #f1f1f1;
 }
 .sidebar button:hover {
   color: #f1f1f1;
 }
-/* Position and style the close button (top right corner) */
+
 .sidebar .closebtn {
   position: absolute;
   top: 10px;
@@ -82,7 +82,7 @@ li {
   margin-left: 50px;
 }
 
-/* The button used to open the sidebar */
+
 .openbtn {
   font-size: 20px;
   cursor: pointer;
@@ -96,20 +96,19 @@ li {
   background-color: #444;
 }
 
-/* Style page content - use this if you want to push the page content to the right when you open the side navigation */
+
 #main {
-  transition: margin-left .5s; /* If you want a transition effect */
+  transition: margin-left .5s; 
   padding: 20px;
 }
 
-/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
 @media screen and (max-height: 450px) {
   .sidebar {padding-top: 15px;}
   .sidebar a {font-size: 18px;}
 } 
 
 .closebtn {
-  background-color: #111; /* Green */
+  background-color: #111; 
   border: none;
   color: white;
   text-align: center;
